test/many-resolve-errors.err.expect
many-resolve-errors.ktn:1:1:(-1): compile error: unable to resolve word 'some_undefined_name'
many-resolve-errors.ktn:3:16:(-1): compile error: unable to resolve word 'some_undefined_name'
many-resolve-errors.ktn:4:16:(-1): compile error: unable to resolve word 'some_other_undefined_name'
many-resolve-errors.ktn:6:7:(-1): compile error: unable to resolve word 'y'
many-resolve-errors.ktn:6:9:(-1): compile error: unable to resolve word 'y'
many-resolve-errors.ktn:6:11:(-1): compile error: unable to resolve word 'z'
many-resolve-errors.ktn:7:7:(-1): compile error: unable to resolve word 'z'
many-resolve-errors.ktn:7:9:(-1): compile error: unable to resolve word 'z'
many-resolve-errors.ktn:10:2:(-1): compile error: unable to resolve word 'vec1'
many-resolve-errors.ktn:10:8:(-1): compile error: unable to resolve word 'vec2'
many-resolve-errors.ktn:10:18:(-1): compile error: unable to resolve word 'vec3'
many-resolve-errors.ktn:12:4:(-1): compile error: unable to resolve word 'bad'
